[package]
name = "wgpu-wasm-test"
description = "wgpu + wasm test"
version = "0.1.0"
authors = ["mattatz <masatatsu.nakamura@gmail.com>"]
edition = "2018"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
bytemuck = { version = "1.7.2", features = ["derive"] }
cgmath = " 0.18.0"
console_log = "0.1.2"
console_error_panic_hook = { version = "0.1.6", optional = true }
js-sys = "0.3.51"
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.23"
winit = { version = "0.25.0", features = ["web-sys"] }
wgpu = { version = "0.11", features = ["webgl"] }
wee_alloc = { version = "0.4.5", optional = true }
log = "0.4"

[dependencies.web-sys]
version = "0.3.55"
features = [
  'console',
  'Location',
  'HtmlCanvasElement'
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
